--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: StinkyPlayers
 version: '${project.version}'
 main: com.ashkiano.stinkyplayers.StinkyPlayers
-api-version: '1.16'
-authors: [AshKiano]
+api-version: '1.20'
+authors: [ AshKiano, BitByLogic ]
